Landing page - first version

--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello world
+<DOCTYPE html>
+    <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" 
+            content="width=device-width, initial-scale=1">
+            <link rel="stylesheet" href="styles.css">
+        </head>
+        <body>
+            <h1>Landsat webpage</h1>
+            <form action="/url" method="GET">
+                <label for="long">Longitude:</label>
+                <input required type="number" id="long" name="long" step="any" min="-180.0" max="180.0" placeholder="0.00">
+                <label for="lat">Latitude:</label>
+                <input required type="number" id="lat" name="lat" step="any" min="-90.0" max="90.0" placeholder="0.00">
+                <button type="Submit"> Submit</button>
+            </form>
+        </body>
+    </html>
+    
+    
